welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: Boolean does not take parameters
	else  ( 10>=a && a>=20 ||  10>=b && b>=20 ) { return 0 }
                                                    ^